@@ -19,8 +19,11 @@ import es.tid.keyserver.controllers.db.DataBase;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
 import java.util.Scanner;
 import java.util.Set;
+import java.util.logging.Level;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -33,11 +36,11 @@ public class ProvisionController {
     /**
      * Redis Database object.
      */
-    private DataBase dbObj;
+    private final DataBase dbObj;
     /**
      * User input shell scanner object.
      */
-    private Scanner sc;
+    private final Scanner sc;
     /**
      * Logging object.
      */
@@ -60,6 +63,7 @@ public class ProvisionController {
      */
     public void menuInsertRegisters() {
         String sha1;
+        String pkfile;
         System.out.print("\n"
                 + "                   - Private Key Provision Manager -\n"
                 + "                   ---------------------------------\n"
@@ -84,23 +88,69 @@ public class ProvisionController {
                 + "*************************************************************************\n"
                 + "\n"
                 + " Write the certificate SHA1 and press ENTER: ");
+        // Private key fingerprint SHA1.
         String input = sc.next().trim();
         if(input.equalsIgnoreCase("Q")){
             System.out.println("Private Key provision cancelled by the user.");
             return;
         }
         sha1 = input;
-        System.out.println(" Write the certificate file full qualified name:\n ");    
+        // Private key file
+        System.out.print(" Write the certificate file full qualified name:\n>> ");    
         input = sc.next().trim();
         if(input.equalsIgnoreCase("Q")){
             logger.info("Private Key provision cancelled by the user.");
             return;
         }
+        pkfile = input;
+        // Ask to the user if the current private key should be removed automatically.
+        boolean autoRemoveKey = false;
+        do{
+            System.out.println(" Do you want remove automatically this current private key");
+            System.out.print(" in a specific date? (y/n):");   
+            input = sc.next().trim();
+            if(input.equalsIgnoreCase("Q")){
+                logger.info("Private Key provision cancelled by the user.");
+                return;
+            } else if("y".equalsIgnoreCase(input)){
+                autoRemoveKey = true;
+            } else if("n".equalsIgnoreCase(input)){
+                autoRemoveKey = false;
+            } else {
+                logger.error("Not valid selection (y/n): {}: ", input);
+            }
+        } while(!("y".equalsIgnoreCase(input) || "n".equalsIgnoreCase(input)));
+        input = null;
+        // Auto remove certificate when exceeds the expiration date.
+        if(autoRemoveKey){
+            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy.MM.dd-HH:mm:ss");
+            boolean validDate;
+            do{
+                System.out.println(" Write the certificate expiration date. If you don't provide");
+                System.out.println(" the date, the private key will be present inside database");
+                System.out.println(" ulimited. You must remove it manually.\n");
+                System.out.print(" Write the date using this format (yyyy.MM.dd-HH:mm:ss): ");    
+                input = sc.next().trim();
+                if(input.equalsIgnoreCase("Q")){
+                    logger.info("Private Key provision cancelled by the user.");
+                    return;
+                }
+                try {
+                    if(input!=null){
+                        dateFormat.parse(input);
+                    }
+                    validDate = true;
+                } catch (ParseException ex) {
+                    validDate = false;
+                    logger.error("Not valid date during PK provisioning: {}", input);
+                }
+            } while(!validDate);
+        }
         // Certificate provision step to KeyServer database.
-        if(this.insertRegiser(sha1, input)){
-            logger.info("The certificate has been included on database.");
+        if(insertRegiser(sha1, pkfile, input)){
+            logger.info("The certificate has been included on database: {}", sha1);
         } else {
-            logger.error("There is a problem with the provision for the current certificate.");
+            logger.error("There is a problem with the provision for the current certificate: {}", sha1);
         }
     }
 
@@ -134,7 +184,6 @@ public class ProvisionController {
         if(!this.containsRegiser(input)){
             // Error level.
             logger.error("The following SHA1 has not found on database:\n\t\t{}\n", input);
-            return;
         } else {
             // Delete the specified register
             if(this.deleteRegiser(input)){
@@ -159,7 +208,7 @@ public class ProvisionController {
                 + "\n"
                 + " Description\n"
                 + " ------------------------------------------------------------------------\n"
-                + " Find a private key from KeyServer database. This command use the"
+                + " Find a private key from KeyServer database. This command use the\n"
                 + " certificate SHA1 to locate the register on database.\n"
                 + "\n"
                 + " Note: If you write Q and press ENTER, the private key provision will\n"
@@ -175,7 +224,6 @@ public class ProvisionController {
         if(!this.containsRegiser(input)){
             // Error level.
             logger.info("The following SHA1 has not found on database:\n\t\t{}\n", input);
-            return;
         } else {
             // Shows the SHA1 and certificate private key.
             String value = this.dbObj.getPrivateKey(input);
@@ -212,11 +260,11 @@ public class ProvisionController {
      * This method provides the main functionality to save a new Private key into 
      * KeyServer database.
      * @param sha1 Hash of the certificate as string.
-     * @param fileName String with the file name with content is the PrivateKey.
+     * @param expDat String with the certificate expiration date.
      * @return True if the register has been saved inside Database.
      * @since v0.3.0
      */
-    private boolean insertRegiser(String sha1, String fileName) {
+    private boolean insertRegiser(String sha1, String fileName, String expDat) {
         // Parsing filename from binary to base64 using Linux Base64 tool.
         String privKeyAsString = "";
         Process p;
@@ -237,7 +285,18 @@ public class ProvisionController {
             logger.trace(errors.toString());
         }
         // Save private key into database
-        return dbObj.setPrivateKey(sha1, privKeyAsString);
+        if(expDat == null){
+            return dbObj.setPrivateKey(sha1, privKeyAsString);
+        } else {
+            dbObj.setPrivateKey(sha1, privKeyAsString);
+            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy.MM.dd-HH:mm:ss");
+            try {
+                return dbObj.setExpPK(sha1, dateFormat.parse(expDat).getTime()/1000);
+            } catch (ParseException ex) {
+                logger.error("Parser exception during PK expiration date conversion: {}", expDat);
+                return false;
+            }
+        }
     }
     
     /**
